# zip_verifyer_v2

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/routers/: task.py
app/domain/models/: task.py
app/domain/repositories/: task_repository.py
app/domain/schemas/: task.py
app/domain/services/: analytics_service.py  storage_service.py
app/infrastructure/repositories/: task_repository_impl.py
app/infrastructure/services/: minio_storage_service.py  sonarqube_stats_service.py
app/use_cases/: upload_zip.py  zip_result.py
migrations/: env.py
migrations/versions/: 8e26e31d2061_add_hash_field.py  ca0697f956f8_create_task_table.py
